commit tree f0b9a82b9ace0bd1eae24dfeddd7009cd5e63950

--- a/app/views/users/account.erb
+++ b/app/views/users/account.erb
@@ -2,6 +2,6 @@
 
 
 <p><a href="/photos">See all Photos</a></p>
-
+<p><a href="/photos/new">Add a Photo</a></p>
 
 <p><a href="/logout">Log Out</a></p>
