adding data to db

--- a/app/views/photos/edit.erb
+++ b/app/views/photos/edit.erb
@@ -6,6 +6,8 @@
 
   <label>Title:</label>
   <input type="text" id="title" name="title" value="<%= @photo.title%>">
+  <label>image:</label>
+  <input type="text" id="image_url" name="image_url" value="<%= @image_url.title%>">
 
   <label>Description:</label>
   <input type="text" id="description" name="description" value="<%= @photo.description%>" >
