--- a/app/views/photos/new.erb
+++ b/app/views/photos/new.erb
@@ -3,14 +3,16 @@
 
 <form action="/photos" method="post">
   <label>Title:</label>
-  <input type="text" id="title" name="title" >
+  <input type="text" id="title" name="title"placeholder="Title" >
 
   <!--#how should i add the image url ? --> 
-
+  <label>Image:</label>
+  
+  <input type="text" id="image_url" name="image_url" placeholder="Image url" >
 
 
   <label>Description:</label>
-  <input type="text" id="description" name="description" >
+  <input type="text" id="description" name="description"placeholder="Description"  >
 
 
 <input type="submit" name="submit" id="submit" >
