post route to view photo in show

--- a/app/views/photos/edit.erb
+++ b/app/views/photos/edit.erb
@@ -7,10 +7,12 @@
   <label>Title:</label>
   <input type="text" id="title" name="title" value="<%= @photo.title%>">
   <label>image:</label>
-  <input type="text" id="image_url" name="image_url" value="<%= @image_url.title%>">
+  <input type="text" id="image_url" name="image_url" value=<img src="<%= @photo.image_url%>" >
 
   <label>Description:</label>
   <input type="text" id="description" name="description" value="<%= @photo.description%>" >
+
+  
 
   <input type="submit" name="submit" id="submit" >
 
