--- a/app/views/photos/show.erb
+++ b/app/views/photos/show.erb
@@ -1,3 +1,6 @@
 
 <h1>Photo</h1>
 
+<h2><%= @photo.title%></h2>
+<img src="<%= @photo.image_url%>" alt="<%= @photo.description%>"><br>
+<h3><%= @photo.description%></h3>
