--- a/app/views/photos/show.erb
+++ b/app/views/photos/show.erb
@@ -4,3 +4,9 @@
 <h2><%= @photo.title%></h2>
 <img src="<%= @photo.image_url%>" alt="<%= @photo.description%>"><br>
 <h3><%= @photo.description%></h3>
+
+<a href="/photos/<%= @photo.id %>/edit">EDIT</a><br>
+
+
+<a href="/delete/<%= @photo.id %>/edit">Delete</a>
+
