adding flash errors

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+<!--- flash start --->
+<%= flash[error]%>
+<!--- END start ----->
     <%= yield %>
 </body>
 </html>
