--- a/app/views/photos/new.erb
+++ b/app/views/photos/new.erb
@@ -3,15 +3,15 @@
 
 <form action="/photos" method="post">
   <label>Title:</label>
-  <input type="text" id="title" name="title"placeholder="Title" >
+  <input type="text" id="title" name="photo[title]"placeholder="Title" >
 
   <label>Image:</label>
   
-  <input type="text" id="image_url" name="image_url" placeholder="Image url" >
+  <input type="text" id="image_url" name="photo[image_url]" placeholder="Image url" >
 
 
   <label>Description:</label>
-  <input type="text" id="description" name="description"placeholder="Description"  >
+  <input type="text" id="description" name="photo[description]"placeholder="Description"  >
 
 
 <input type="submit" name="submit" id="submit" >
