--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,7 +8,9 @@
 </head>
 <body>
 <!--- flash start --->
-<%= flash[error]%>
+
+<%= flash[:error] %>
+
 <!--- END start ----->
     <%= yield %>
 </body>
