--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,5 +1,5 @@
 
-<h1>Welcome to Photography</h1>
+<h1>Welcome to Stockphoto</h1>
 <!DOCTYPE html>
 <html>
 <style>
@@ -45,7 +45,7 @@ hr {
 }
 </style>
 <body>
-<h2>High quality Photos at your Fingertips</h2>
+<h2> Save Photos Now!! High quality Photos at your Fingertips</h2>
 
 <p> Please <a href="/signup">Sign Up</a> or <a href="/login">Log In</a> to continue.
 
