--- a/app/views/search.erb
+++ b/app/views/search.erb
@@ -1,5 +1,5 @@
 
-<h1>Welcome to Stockphoto</h1>
+
 <!DOCTYPE html>
 <html>
 <style>
@@ -45,6 +45,14 @@ hr {
 }
 </style>
 <body>
+
+<form action="/search" method="get">
+    <input type="text" placeholder="Title" name="title">
+    <input type="submit" value="search">
+</form>
+
+<h1>Welcome to Stockphoto</h1>
+
 <h2> Save Photos Now!! High quality Photos at your Fingertips</h2>
 
 <p> Please <a href="/signup">Sign Up</a> or <a href="/login">Log In</a> to continue.
