--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,26 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="profile.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
 <!---------------------------- NAV BAR STARTS --------------------------->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">StockPhoto</a>
+    <a class="navbar-brand" href="/">StockPhoto</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
-        </li>
+        
         <% if logged_in? %>
         <li class="nav-item">
           <a class="nav-link" href="/account">Your Profile</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/photos" tabindex="-1" aria-disabled="true">All Photos</a>
+        </li>
+        <li class="nav-item1">
+          <a class="nav-link active" aria-current="page" href="/logout">Sign Out</a>
+        </li>
+
         <% else %>
         <li class="nav-item">
           <a class="nav-link" href="/login">Login</a>
@@ -32,22 +38,25 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/signup">Sign Up</a>
-        
         </li>
+
+
         <% end %>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
+        
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2"  href="/search" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+      <% if !logged_in? %>
+      <form class="d-flex" action="/search" method="get">
+      <input type="text" placeholder="Search" name="title">
+     
+        <button class="btn btn-outline-success" type="submit">Search</button>  
       </form>
+
+      
+      <% end %>
     </div>
   </div>
 </nav>
 <!------------------------------------- NAV BAR END ------------------------------>
-
 
 
 <!---START FLASH ---->
