--- a/app/views/users/account.erb
+++ b/app/views/users/account.erb
@@ -1,4 +1,4 @@
-<h1> Welcome </h1>
+<h1> Hello!  <%= current_user.username%> </h1><br>
 
 
 
@@ -8,5 +8,3 @@
 
 <p><a href="/photos">See all Photos</a></p>
 <p><a href="/photos/new">Add a Photo</a></p>
-
-<p><a href="/logout">Log Out</a></p>
