addint search all photos on the ssearch

--- a/app/views/results.erb
+++ b/app/views/results.erb
@@ -1,8 +1,11 @@
 
 
- <img src='<%= @photo.image_url%>' alt="<%= @photo.description%>"><br>
-
-  
 
 
 
+
+ <% @photos.each do |photo| %>
+    <img src='<%= photo.image_url%>' alt="<%= photo.description%>"><br>
+     
+    
+    <% end %>
