--- a/app/views/search.erb
+++ b/app/views/search.erb
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html>
 <style>
@@ -8,103 +7,33 @@ body, html {
   margin: 0;
 }
 
-.bgimg {
-  background-image: url('https://images.pexels.com/photos/1546027/pexels-photo-1546027.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  position: relative;
-  color: white;
-  font-family: "Courier New", Courier, monospace;
-  font-size: 25px;
+.carousel-item{
+    height: 100vh;
+    min-height: 300px;
+    background: no-repeat scroll center scroll;
+    -webkit-background-size: cover;
+    background-size: cover;
+
 }
 
-.topleft {
-  position: absolute;
-  top: 0;
-  left: 16px;
+.carousel-caption{
+    bottom: 180px;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+.carousel-caption h5{
+    font-size: 100px;
+    font-weight: 600;
 }
 
-.bottomleft {
-  position: absolute;
-  bottom: 0;
-  left: 16px;
-}
-
-.middle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-hr {
-  margin: auto;
-  width: 40%;
+.carousel-caption p{
+    font-size: 18px;
+    top: 2rem;
 }
 </style>
 <body>
 
-<h1>Welcome to Stockphoto</h1>
-
-<h2> Save Photos Now!! High quality Photos at your Fingertips</h2>
-
-
-
-<div class="bgimg">
- 
-  <div class="middle">
-    <h1>COMING SOON</h1>
-    <hr>
-    <p id="demo" style="font-size:30px"></p>
-  </div>
-  
-</div>
-<script>
-// Set the date we're counting down to
-var countDownDate = new Date("Mar 27, 2021 15:37:25").getTime();
-
-// Update the count down every 1 second
-var countdownfunction = setInterval(function() {
-
-  // Get todays date and time
-  var now = new Date().getTime();
-  
-  // Find the distance between now an the count down date
-  var distance = countDownDate - now;
-  
-  // Time calculations for days, hours, minutes and seconds
-  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-  
-  // Output the result in an element with id="demo"
-  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
-  + minutes + "m " + seconds + "s ";
-  
-  // If the count down is over, write some text 
-  if (distance < 0) {
-    clearInterval(countdownfunction);
-    document.getElementById("demo").innerHTML = "EXPIRED";
-  }
-}, 1000);
-</script>
-
-
-
-
-
-
-
-
-</body>
-</html>
-
-
-
-<!----- carosel photos with wording - 
+<!----- carosel photos with wording --->
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -113,24 +42,24 @@ var countdownfunction = setInterval(function() {
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/eric-gilkes-SHWQ9Cbw32I-unsplash.jpg" class="d-block w-100" alt="...">
+      <img src='https://images.pexels.com/photos/1546027/pexels-photo-1546027.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500' class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
+        <h5>Welcome to Stockphoto</h5>
+        <p></p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://images.unsplash.com/photo-1525287361852-20a7e276986e?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MjUwfHxjYW1lcmF8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
+        <h5>Save Photos Now! High quality Photos at your Fingertips</h5>
+        <p></p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://images.unsplash.com/photo-1589397883755-2956c56267d3?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDN8fGNhbWVyYXxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <h5>View your greates creations</h5>
+        <p></p>
       </div>
     </div>
   </div>
@@ -144,4 +73,3 @@ var countdownfunction = setInterval(function() {
   </button>
 </div>
 
------>
