--- a/app/views/users/account.erb
+++ b/app/views/users/account.erb
@@ -1,4 +1,4 @@
-<h1> Hello!  <%= current_user.username%> </h1><br>
+<h1> Hello!  <%= current_user.username.capitalize%> </h1><br>
 
 
 
@@ -6,5 +6,5 @@
 
 
 
-<p><a href="/photos">See all Photos</a></p>
+<p><a href="/photos">View all Photos</a></p>
 <p><a href="/photos/new">Add a Photo</a></p>
