--- a/app/views/search.erb
+++ b/app/views/search.erb
@@ -58,7 +58,7 @@ body, html {
     <div class="carousel-item">
       <img src="https://images.unsplash.com/photo-1589397883755-2956c56267d3?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDN8fGNhbWVyYXxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>View your greates creations</h5>
+        <h5>View your greatest creations</h5>
         <p></p>
       </div>
     </div>
