styling users homepage

--- a/app/views/users/account.erb
+++ b/app/views/users/account.erb
@@ -1,10 +1,22 @@
+
+
+
+<section class="container-fluid bg">
+
+
+<div class= "titlea">
+
 <h1> Hello!  <%= current_user.username.capitalize%> </h1><br>
 
-
-
-
-
-
+</div>
 
 <p><a href="/photos">View all Photos</a></p>
 <p><a href="/photos/new">Add a Photo</a></p>
+
+
+
+</section>
+
+
+
+
