--- a/public/stylesheets/account.css
+++ b/public/stylesheets/account.css
@@ -1,7 +1,7 @@
 
 
 
-.bg{
+.bg1{
     background: url("https://media.istockphoto.com/photos/monochrome-texture-with-white-and-gray-color-picture-id1138782666?k=6&m=1138782666&s=612x612&w=0&h=yxW7wRHOVZ5eA3aCnfNq3c5vorKgo2zmNuoIK0DFiao=") no-repeat;
     width: 100%;
     height: 100vh;
@@ -9,7 +9,5 @@
     }
 
 
-
-  
 
  
