styling the index erb

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,11 +9,15 @@
     <link rel="stylesheet" href="/stylesheets/signup.css" type="text/css">
     <link rel="stylesheet" href="/stylesheets/search.css" type="text/css">
     <link rel="stylesheet" href="/stylesheets/account.css" type="text/css">
+    <link rel="stylesheet" href="/stylesheets/index.css" type="text/css">
+    
+
     
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" type="text/css" href=index.css"/>
     <title>Document</title>
 
 </head>
@@ -81,7 +85,6 @@
 
 <!-- Footer -->
 
-</footer>
     
 </body>
 </html>
