--- a/app/views/users/account.erb
+++ b/app/views/users/account.erb
@@ -1,10 +1,9 @@
 
-
+<!-----
 
 <section class="container-fluid bg1">
 
 
-<div class= "titlea">
 
 <h1> Hello!  <%= current_user.username.capitalize%> </h1><br>
 
@@ -14,9 +13,15 @@
 <p><a href="/photos/new">Add a Photo</a></p>
 
 
-
 </section>
+---->
 
+
+
+<div class="container-fluid bg1">
+<h1> Hello!  <%= current_user.username.capitalize%> </h1>
+<p><a href="/photos/new">Add a Photo</a></p>
+</div>
 
 
 
