--- a/public/stylesheets/account.css
+++ b/public/stylesheets/account.css
@@ -1,13 +1,24 @@
 
 
-
-.bg1{
-    background: url("https://media.istockphoto.com/photos/monochrome-texture-with-white-and-gray-color-picture-id1138782666?k=6&m=1138782666&s=612x612&w=0&h=yxW7wRHOVZ5eA3aCnfNq3c5vorKgo2zmNuoIK0DFiao=") no-repeat;
+/* Style the body */
+body {
+    font-family: Arial;
+    margin: 0;
+  }
+  
+  /* Header/Logo Title */
+  .bg1 {
+    padding: 80px;
+    text-align: center;
+    /* background: black; */
+    color: white;
+    font-size: 30px;
+    background: url("https://images.unsplash.com/photo-1544441118-2b011561f89c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTc0fHxjYW1lcmF8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60") no-repeat;
     width: 100%;
     height: 100vh;
     background-size: 100%;
-    }
-
-
-
- 
+    
+  }
+  
+  /* Page Content */
+  .content {padding:20px;}
