--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/stylesheets/search.css" type="text/css">
     <link rel="stylesheet" href="/stylesheets/account.css" type="text/css">
     <link rel="stylesheet" href="/stylesheets/index.css" type="text/css">
+    <link rel="stylesheet" href="/stylesheets/new.css" type="text/css">
     
 
     
