--- a/app/views/photos/new.erb
+++ b/app/views/photos/new.erb
@@ -1,4 +1,12 @@
 
+
+
+
+
+<div class="add-box">
+
+
+
 <h1>Add a Photo</h1>
 
 <form action="/photos" method="post">
@@ -14,5 +22,8 @@
   <input type="text" id="description" name="photo[description]"placeholder="Description"  >
 
 
-<input type="submit" name="submit" id="submit" >
+<input type="submit"  name="submit" id="submit" >
 </form>
+
+
+</div>
