--- a/app/views/photos/edit.erb
+++ b/app/views/photos/edit.erb
@@ -1,4 +1,7 @@
 
+
+
+<div class="add-box">
 <h1>Update<h1>
 
 <form action="/photos/<%= @photo.id %>" method="POST">
@@ -13,7 +16,8 @@
   <label>Description:</label>
   <input type="text" id="description" name="photo[description]" value="<%= @photo.description%>" >
 
-  <input type="submit" name="Update" id="submit" >
+  <input type="submit" name="Update" id="submit" placeholder="Update" >
 
 </form>
 
+</div>
