styling the update css file

--- a/app/views/photos/edit.erb
+++ b/app/views/photos/edit.erb
@@ -1,7 +1,7 @@
 
+<section class="container-fluid bg5">
 
-
-<div class="add-box">
+<div class="add-box bg5">
 <h1>Update<h1>
 
 <form action="/photos/<%= @photo.id %>" method="POST">
@@ -21,3 +21,4 @@
 </form>
 
 </div>
+</section>
