--- a/app/views/photos/new.erb
+++ b/app/views/photos/new.erb
@@ -2,9 +2,9 @@
 
 
 
+<section class="container-fluid bg5">
 
 <div class="add-box">
-
 
 
 <h1>Add a Photo</h1>
@@ -27,3 +27,5 @@
 
 
 </div>
+
+</section>
