--- a/public/stylesheets/new.css
+++ b/public/stylesheets/new.css
@@ -1,5 +1,5 @@
 
-body{
+.bg5{
   
     background: url("https://images.unsplash.com/photo-1613205256376-789adab64e71?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MjY0fHxicm93bnxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60");
     width: 100%;
