styling the show file erb

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/stylesheets/account.css" type="text/css">
     <link rel="stylesheet" href="/stylesheets/index.css" type="text/css">
     <link rel="stylesheet" href="/stylesheets/new.css" type="text/css">
+    <link rel="stylesheet" href="/stylesheets/show.css" type="text/css">
     
     
 
