--- a/app/views/photos/show.erb
+++ b/app/views/photos/show.erb
@@ -1,4 +1,8 @@
 
+
+<section class="container-fluid bg6">
+
+
 <h1>Photo</h1>
 
 <h2><%= @photo.title%></h2>
@@ -15,3 +19,4 @@
 
 </form>
 
+</section>
